--- a/css/component/_focus.scss
+++ b/css/component/_focus.scss
@@ -4,26 +4,30 @@
     background: #f2f2f2;
     padding: 50px 0;
     &__title {
-
         &-img {
-            height: 70px;
+            height: 50px;
             margin-right: 5px;
             margin-left: 30px;
         }
-
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         display: flex;
         justify-content: start;
         align-items: center;
-        font-size: 40px;
+        font-size: 32px;
         font-weight: bold;
         line-height: 1;
         color: #005699;
-
         span {
             display: block;
             padding: 9px 13px;
         }
+    }
+    &__subtitle {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 1.2;
+        color: #0081bc;
+        margin-bottom: 20px;
     }
 
     &__link{
@@ -31,7 +35,7 @@
     }
 
     &__text {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 300;
         line-height: 1.5;
         text-align: justify;
@@ -65,8 +69,9 @@
             }
 
             &__name {
-                font-size: 28px;
+                font-size: 18px;
                 text-align: center;
+                flex: 1 1 10%;
             }
 
             &__no {
@@ -77,7 +82,7 @@
     }
 
     &__name {
-        font-size: 36px;
+        font-size: 18px;
         font-weight: 500;
         line-height: 1.2;
         text-align: left;
