--- a/css/component/_news.scss
+++ b/css/component/_news.scss
@@ -3,40 +3,35 @@
 .news {
     background: #fff;
     padding: 50px 0;
-
     &__title {
         &-img {
-            height: 70px;
+            height: 50px;
             margin-right: 5px;
             margin-left: 30px;
         }
-
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         display: flex;
         justify-content: start;
         align-items: center;
-        font-size: 40px;
+        font-size: 32px;
         font-weight: bold;
         line-height: 1;
         color: #005699;
-
         span {
             display: block;
             padding: 9px 13px;
         }
     }
-
     &__subtitle {
-        font-size: 38px;
-        font-weight: 400;
+        font-size: 18px;
+        font-weight: 500;
         line-height: 1.2;
-        text-align: left;
-        color: #fff;
+        color: #0081bc;
         margin-bottom: 20px;
     }
 
     &__text {
-        font-size: 24px;
+        font-size: 16px;
         font-weight: 300;
         line-height: 1.5;
         text-align: justify;
@@ -50,7 +45,7 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
-        padding: 30px 40px;
+        padding: 20px 25px;
         border-radius: 10px;
         background: linear-gradient(
             to bottom,
