--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -29,14 +29,14 @@
 
     &__no{
         color: #FFF;
-        font-size: 28px;
+        font-size: 20px;
         font-weight: bold;
         line-height: 1;
         margin-bottom: 20px;
     }
     &__en{
         color: #FFF;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 100;
         line-height: 1;
         margin-bottom: 50px;
@@ -44,19 +44,19 @@
             color: #fff;
         }
     }
-    &__slogen{
+    &__slogan{
         color: #FFF;
-        width: calc( 120% + 7px );
-        font-size: 93px;
+        width: calc( 105% + 7px );
+        font-size: 63px;
         font-weight: 500;
         line-height: 1;
         letter-spacing: 2px;
         text-align: right;
-        margin: 25px -5px 150px 0;
+        margin: 15px -5px 80px 0;
         white-space: nowrap;
         &-en{
             color: #f3ad0f;
-            font-size: 42px;
+            font-size: 36px;
             font-weight: 400;
             line-height: 1;
             margin-bottom: 15px;
@@ -64,17 +64,17 @@
     }
     &__date{
         color: #0993d2;
-        font-size: 58px;
+        font-size: 42px;
         font-weight: 500;
         line-height: 1;
         margin-bottom: 10px;
     }
     &__location{
         color: #0993d2;
-        font-size: 58px;
+        font-size: 48px;
         font-weight: 500;
         line-height: 1;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     
     .nav{
@@ -87,7 +87,7 @@
         line-height: 1;
       
         &-link {
-            font-size: 28px;
+            font-size: 20px;
             font-weight: 400;
             line-height: 1;
             color: #fff;
