--- a/css/component/_info.scss
+++ b/css/component/_info.scss
@@ -30,7 +30,7 @@
     }
     &__box{
         display: flex;
-        align-items: start;
+        align-items: center;
         overflow: hidden;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
