--- a/css/component/_topic.scss
+++ b/css/component/_topic.scss
@@ -31,7 +31,7 @@
     }
     &__box{
         display: flex;
-        align-items: start;
+        align-items: center;
         overflow: hidden;
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
