--- a/css/component/_news.scss
+++ b/css/component/_news.scss
@@ -23,7 +23,7 @@
         }
     }
     &__subtitle {
-        font-size: 18px;
+        font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
         color: #0081bc;
@@ -45,7 +45,7 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
-        padding: 20px 25px;
+        padding: 25px;
         border-radius: 10px;
         background: linear-gradient(
             to bottom,
