--- a/css/all.css
+++ b/css/all.css
@@ -11266,7 +11266,7 @@ img {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  color: #0081bc;
+  color: #FFF;
   margin-bottom: 20px;
 }
 
