--- a/css/component/_news.scss
+++ b/css/component/_news.scss
@@ -26,7 +26,7 @@
         font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
-        color: #0081bc;
+        color: #FFF;
         margin-bottom: 20px;
     }
 
