--- a/css/layout/_base.scss
+++ b/css/layout/_base.scss
@@ -111,7 +111,11 @@ p{
 }
 .container{
   min-width: $media-lg !important;
-  max-width: $media-lg !important;
+}
+main{
+  .container{
+    max-width: $media-lg !important;
+  }
 }
 img {
 
