--- a/css/component/_news.scss
+++ b/css/component/_news.scss
@@ -26,7 +26,7 @@
         font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
-        color: #FFF;
+        color: #fff;
         margin-bottom: 20px;
     }
 
@@ -52,5 +52,11 @@
             #21bcae 0%,
             #18609b 100%
         ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    }
+
+    .btn__more-w {
+        position: absolute;
+        right: 40px;
+        bottom: 20px;
     }
 }
