--- a/css/all.css
+++ b/css/all.css
@@ -11303,7 +11303,7 @@ img {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding: 25px;
+  padding: 25px 25px 80px 25px;
   border-radius: 10px;
   background: -webkit-gradient(linear, left top, left bottom, from(#21bcae), to(#18609b));
   background: linear-gradient(to bottom, #21bcae 0%, #18609b 100%);
