--- a/css/component/_news.scss
+++ b/css/component/_news.scss
@@ -45,7 +45,7 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
-        padding: 25px;
+        padding: 25px 25px 80px 25px;
         border-radius: 10px;
         background: linear-gradient(
             to bottom,
