--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -38,7 +38,7 @@
             display: flex;
             justify-content: end;
             margin-top: 50px;
-            margin-right: 60px;
+            // margin-right: 60px;
             a{
                 margin-left: 15px;
             }
