--- a/css/all.css
+++ b/css/all.css
@@ -10939,6 +10939,26 @@ img {
   margin-bottom: 15px;
 }
 
+.header__slogan_en {
+  color: #FFF;
+  width: calc( 110% + 7px);
+  font-size: 42px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 2px;
+  text-align: right;
+  margin: 15px -5px 80px 0;
+  white-space: nowrap;
+}
+
+.header__slogan_en-en {
+  color: #f3ad0f;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 1;
+  margin-bottom: 15px;
+}
+
 .header__date {
   color: #0993d2;
   font-size: 42px;
@@ -11060,7 +11080,7 @@ img {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .footer .nav__tools a {
